# Agent-Saan

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: agent_saan_overview.json  dashboard.yml
src/agent_saan/: __init__.py  config.py  main.py
src/agent_saan/api/: __init__.py
src/agent_saan/db/: __init__.py  base.py  models.py  session.py
src/agent_saan/events/: __init__.py  bus.py  topics.py
src/agent_saan/memory/: __init__.py  long_term.py  short_term.py  store.py
src/agent_saan/models/: __init__.py  events.py  memory.py  nlu.py  observability.py  plugins.py  preferences.py  safety.py  session.py  suggestions.py  tasks.py
src/agent_saan/nlu/: __init__.py  engine.py
src/agent_saan/orchestrator/: __init__.py
src/agent_saan/personality/: __init__.py
src/agent_saan/plugins/: __init__.py
src/agent_saan/safety/: __init__.py
src/agent_saan/suggestions/: __init__.py
src/agent_saan/tasks/: __init__.py
tests/: __init__.py  conftest.py  test_coreference.py  test_event_bus.py  test_long_term_memory.py  test_models.py  test_nlu_audio.py  test_nlu_engine.py  test_nlu_image.py  test_project_structure.py  test_short_term_memory.py
