[project]
name = "agent-saan"
version = "0.1.0"
description = "Agent Saan — a personal AI assistant inspired by Iron Man's Friday"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Agent Saan" }]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "aioredis>=2.0.1",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "pgvector>=0.3.2",
    "openai>=1.30.0",
    "python-jose[cryptography]>=3.3.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "alembic>=1.13.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "croniter>=2.0.5",
    "tiktoken>=0.7.0",
    "librosa>=0.10.2",
    "pypdf2>=3.0.1",
    "markdown>=3.6",
    "beautifulsoup4>=4.12.3",
    "chardet>=5.2.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_saan"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["agent_saan"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
